force-app/main/default/objects/TestDrive__c/TestDrive__c.object-meta.xml
<CustomObject>
    <description>Records a test drive appointment booked via Agentforce for Electra Cars.</description>
    <label>Test Drive</label>
    <nameField>
        <displayFormat>TD-{0000}</displayFormat>
        <label>Test Drive Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Drives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>