force-app/main/default/objects/TestDrive__c/fields/Agent_Session_ID__c.field-meta.xml
<CustomField>
    <fullName>Agent_Session_ID__c</fullName>
    <label>Agent Session ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>