force-app/main/default/objects/TestDrive__c/fields/Assigned_Agent__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Test_Drives</relationshipName>
    <type>Lookup</type>
</CustomField>