force-app/main/default/objects/TestDrive__c/fields/Booked_Via__c.field-meta.xml
<CustomField>
    <fullName>Booked_Via__c</fullName>
    <label>Booked Via</label>
    <length>100</length>
    <type>Text</type>
</CustomField>