force-app/main/default/objects/TestDrive__c/fields/Booking_Slot__c.field-meta.xml
<CustomField>
    <fullName>Booking_Slot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking Slot</label>
    <referenceTo>Booking_Slot__c</referenceTo>
    <relationshipLabel>Test Drives</relationshipLabel>
    <relationshipName>Test_Drives</relationshipName>
    <type>Lookup</type>
</CustomField>