force-app/main/default/objects/TestDrive__c/fields/Dealership__c.field-meta.xml
<CustomField>
    <fullName>Dealership__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Dealership</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>TestDrivesDealership</relationshipLabel>
    <relationshipName>Test_Drives</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>