force-app/main/default/objects/TestDrive__c/fields/Dealership_Name__c.field-meta.xml
<CustomField>
    <fullName>Dealership_Name__c</fullName>
    <formula>Dealership__r.Name</formula>
    <label>Dealership Name</label>
    <type>Text</type>
</CustomField>