force-app/main/default/objects/TestDrive__c/fields/New_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>New_Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Vehicle</label>
    <referenceTo>Vehicle</referenceTo>
    <relationshipLabel>Test Drives</relationshipLabel>
    <relationshipName>Test_Drives</relationshipName>
    <type>Lookup</type>
</CustomField>