force-app/main/default/objects/TestDrive__c/fields/New_Vehicle_Name__c.field-meta.xml
<CustomField>
    <fullName>New_Vehicle_Name__c</fullName>
    <formula>New_Vehicle__r.Name</formula>
    <label>New Vehicle Name</label>
    <type>Text</type>
</CustomField>