force-app/main/default/objects/TestDrive__c/fields/Preferred_Date_BS__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Date_BS__c</fullName>
    <formula>Booking_Slot__r.Preferred_Date__c</formula>
    <label>Preferred Date(BS)</label>
    <type>Date</type>
</CustomField>