force-app/main/default/objects/TestDrive__c/fields/Preferred_Slot_BS__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Slot_BS__c</fullName>
    <formula>TEXT(Booking_Slot__r.Preferred_Time_Slot__c)</formula>
    <label>Preferred Slot(BS)</label>
    <type>Text</type>
</CustomField>