force-app/main/default/objects/TestDrive__c/fields/Preferred_Time_Slot__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Time_Slot__c</fullName>
    <label>Preferred Time Slot</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Morning (9-12)</fullName>
            </value>
            <value>
                <fullName>Afternoon (12-5)</fullName>
            </value>
            <value>
                <fullName>Evening (5-7)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>