force-app/main/default/objects/TestDrive__c/fields/Showroom_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Showroom_Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Showroom Vehicle</label>
    <referenceTo>Showroom_Vehicle__c</referenceTo>
    <relationshipLabel>Test Drives</relationshipLabel>
    <relationshipName>Test_Drives</relationshipName>
    <type>Lookup</type>
</CustomField>