force-app/main/default/objects/TestDrive__c/fields/Test_Drive_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Test_Drive_Zip_Code__c</fullName>
    <formula>Dealership__r.BillingPostalCode</formula>
    <label>Test Drive Zip Code</label>
    <type>Text</type>
</CustomField>