force-app/main/default/objects/TestDrive__c/fields/Vehicle_Definition__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Definition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle Definition</label>
    <referenceTo>VehicleDefinition</referenceTo>
    <relationshipLabel>Test Drives</relationshipLabel>
    <relationshipName>Test_Drives</relationshipName>
    <type>Lookup</type>
</CustomField>