force-app/main/default/objects/TestDrive__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Lead__c</columns>
    <columns>Booking_Slot__c</columns>
    <columns>Booking_Status__c</columns>
    <columns>Showroom_Vehicle__c</columns>
    <columns>Agent_Session_ID__c</columns>
    <columns>Confirmation_Channel__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>